fixed ratings on shows preview not showing

--- a/src/components/ShowOverview.css
+++ b/src/components/ShowOverview.css
@@ -835,9 +835,4 @@
     width: 220px;
     height: 190px;
   }
-
-  .cast-name {
-    /* white-space: normal; */
-    /* margin-bottom: -10px; */
-  }
 }
